--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -7,6 +7,12 @@
         mc:Ignorable="d"
         Title="Jam54 Launcher" Height="750" Width="1230">
     <Grid>
+        <Grid.Background>
+            <LinearGradientBrush EndPoint="0.6,1.5" StartPoint="0,0" Opacity="0.995" SpreadMethod="Pad" MappingMode="RelativeToBoundingBox">
+                <GradientStop Color="Black" Offset="1"/>
+                <GradientStop Color="#FF0F1330" Offset="0.36"/>
+            </LinearGradientBrush>
+        </Grid.Background>
 
     </Grid>
 </Window>
