--- a/Assets/Jam54Launcher/UI/MainMenu.uxml
+++ b/Assets/Jam54Launcher/UI/MainMenu.uxml
@@ -15,9 +15,7 @@
         <ui:VisualElement name="Background" style="-unity-background-image-tint-color: rgb(255, 255, 255); background-color: rgba(0, 0, 0, 0); flex-grow: 1; background-image: url(&apos;project://database/Assets/Jam54Launcher/Textures/Background.png?fileID=2800000&amp;guid=fb56a08e0edb3b74fb0db8a064f66abe&amp;type=3#Background&apos;); -unity-background-scale-mode: stretch-to-fill;">
             <ui:VisualElement name="TitleBar" style="flex-grow: 0; background-color: rgb(84, 120, 68); height: 108px; flex-direction: row; align-items: center; justify-content: flex-start;">
                 <ui:Label text="Games (x)" display-tooltip-when-elided="true" name="GamesPrograms_Label" style="color: rgb(255, 255, 255); -unity-font-style: bold; font-size: 25px; margin-left: 2px; align-items: stretch; left: 62px;" />
-                <ui:Toggle label="Games" name="Games_Toggle" class="regular_button">
-                    <ui:VisualElement style="position: absolute; width: 100%; height: 100%; background-color: rgba(232, 0, 255, 255);" />
-                </ui:Toggle>
+                <ui:Toggle label="Games" name="Games_Toggle" class="regular_button" style="left: 134px;" />
             </ui:VisualElement>
             <ui:VisualElement name="ProgramsAndGames" style="background-color: rgb(147, 80, 80); flex-grow: 1;" />
         </ui:VisualElement>
