--- a/Assets/Jam54Launcher/UI/Styles.uss
+++ b/Assets/Jam54Launcher/UI/Styles.uss
@@ -12,7 +12,7 @@
 
 .my-dropdown .unity-base-popup-field__arrow {
     background-image: url('project://database/Assets/Jam54Launcher/Textures/DropDown.png?fileID=2800000&guid=facdf41ba3aea5e4b965f41aa306e1ca&type=3#DropDown');
-    -unity-background-image-tint-color: rgba(255, 255, 255, 255);
+    -unity-background-image-tint-color: rgb(255, 255, 255);
     width: 26px;
     height: 18px;
 }
