--- a/Assets/Jam54Launcher/UI/MainMenu.uxml
+++ b/Assets/Jam54Launcher/UI/MainMenu.uxml
@@ -129,7 +129,7 @@
                             </ui:VisualElement>
                         </ui:VisualElement>
                         <ui:VisualElement name="App5Holder" style="background-color: rgba(0, 255, 218, 0); width: 188px; height: 234px; margin-left: 24px; margin-right: 24px; margin-top: 24px; margin-bottom: 24px; left: 35px; top: 0; display: flex;">
-                            <ui:VisualElement name="Image" style="width: 188px; height: 188px; background-image: url(&apos;project://database/Assets/Jam54Launcher/Textures/WToI.png?fileID=2800000&amp;guid=db686e3b61e13ea4984c4061be9790b7&amp;type=3#WToI&apos;); border-top-left-radius: 30px; border-bottom-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; flex-direction: row-reverse; align-items: flex-end; -unity-background-image-tint-color: rgba(229, 229, 229, 255);">
+                            <ui:VisualElement name="Image" style="width: 188px; height: 188px; background-image: url(&apos;project://database/Assets/Jam54Launcher/Textures/WToI.png?fileID=2800000&amp;guid=db686e3b61e13ea4984c4061be9790b7&amp;type=3#WToI&apos;); border-top-left-radius: 30px; border-bottom-left-radius: 30px; border-top-right-radius: 30px; border-bottom-right-radius: 30px; flex-direction: row-reverse; align-items: flex-end; -unity-background-image-tint-color: rgb(229, 229, 229);">
                                 <ui:VisualElement name="UpdateDownloadIcon" style="background-image: url(&apos;project://database/Assets/Jam54Launcher/Textures/Update.png?fileID=2800000&amp;guid=c0af1200e8526be41976bc5418a3caa3&amp;type=3#Update&apos;); width: 23px; height: 23px; margin-left: 13px; margin-right: 13px; margin-top: 13px; margin-bottom: 13px;" />
                             </ui:VisualElement>
                             <ui:VisualElement name="BottomBar" style="flex-grow: 1; align-items: center; justify-content: center; margin-top: 6px;">
@@ -195,7 +195,8 @@
                     <ui:VisualElement name="Row3" style="height: 64px; flex-direction: row; align-items: center; top: 31px; justify-content: flex-start; width: 346px; left: 12px; border-bottom-color: rgba(255, 255, 255, 0.5); border-bottom-width: 1px; margin-bottom: 3px;">
                         <ui:Label text="Platform" display-tooltip-when-elided="true" name="Platform3_Label" style="-unity-font-definition: url(&apos;project://database/Assets/Jam54Launcher/Other/Fonts/Roboto-Regular%20SDF.asset?fileID=11400000&amp;guid=3425d65c12ac42647a4dfc5a05176cd2&amp;type=2#Roboto-Regular SDF&apos;); font-size: 21px; color: rgba(255, 255, 255, 0.65); padding-left: 0; margin-left: 0; width: 50%; padding-right: 0; margin-right: 0;" />
                         <ui:VisualElement name="IconsHolder" style="width: 50%; flex-direction: row; justify-content: flex-end; padding-right: 2px;">
-                            <ui:VisualElement name="Platform_Image" style="width: 34px; height: 34px; background-color: rgba(0, 216, 255, 0.19);" />
+                            <ui:VisualElement name="Android_Image" style="width: 32px; height: 32px; background-image: url(&apos;project://database/Assets/Jam54Launcher/Textures/Android.png?fileID=2800000&amp;guid=5c9aeed815d66bc41bc69e8cb2b7d765&amp;type=3#Android&apos;);" />
+                            <ui:VisualElement name="Windows_Image" style="width: 32px; height: 32px; background-image: url(&apos;project://database/Assets/Jam54Launcher/Textures/Windows.png?fileID=2800000&amp;guid=287ce8de8b8acf841ae9451f9c812589&amp;type=3#Windows&apos;); margin-left: 20px;" />
                         </ui:VisualElement>
                     </ui:VisualElement>
                 </ui:VisualElement>
