--- a/Jam54LauncherStarter/MainWindow.xaml
+++ b/Jam54LauncherStarter/MainWindow.xaml
@@ -7,7 +7,10 @@
         mc:Ignorable="d"
         Title="Jam54LauncherStarter" Height="350" Width="300" ResizeMode="NoResize" WindowState="Normal" WindowStyle="None" WindowStartupLocation="CenterScreen">
     <Window.Background>
-        <SolidColorBrush Color="#FFD30F0F" Opacity="0"/>
+        <LinearGradientBrush EndPoint="1,1" StartPoint="0.5,0">
+            <GradientStop Color="#FF101431"/>
+            <GradientStop Color="#FF093F41" Offset="1"/>
+        </LinearGradientBrush>
     </Window.Background>
     <Grid>
         <MediaElement x:Name="MyMediaElement" Margin="
